remove fsanitize, fix timing

--- a/philo_three/Makefile
+++ b/philo_three/Makefile
@@ -11,11 +11,11 @@ HDR := philosophers.h
 NAME := philo_three
 
 CC := gcc
-CFLAGS := -Wall -Wextra -Werror -fsanitize=address
+CFLAGS := -Wall -Wextra -Werror
 
 BINDIR := /usr/local/bin
 
-LIBS :=
+LIBS := -lpthread
 
 .PHONY: all re fclean clean source lint
 all: $(NAME)
